# mytime-gui

./: .gitignore  .prettierrc.json  CHANGELOG.md  LICENSE  README.md  bun.lockb  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  node_tests.yml  rust_tests.yml  tests.yml
public/: index.html
src/: App.tsx  App.vue  index.tsx  main.ts  main.tsx  models.tsx  reducers.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2024-03-16-051211_create_settings/: down.sql  up.sql
src-tauri/migrations/2024-03-19-063713_insert_default_settings/: down.sql  up.sql
src-tauri/migrations/2024-03-19-065000_create_tasks/: up.sql
src-tauri/migrations/2024-04-08-082541_add_favourite/: down.sql  up.sql
src-tauri/migrations/2024-04-11-112229_add_integ_extra_param/: down.sql  up.sql
src-tauri/migrations/2024-04-22-171103_create_tasks_index/: down.sql  up.sql
src-tauri/migrations/2024-05-01-153047_add_right_sidebar_setting/: down.sql  up.sql
src-tauri/migrations/2024-05-06-160455_add_secondary_color/: down.sql  up.sql
src-tauri/migrations/2024-05-08-162249_add_integration_username/: down.sql  up.sql
src-tauri/migrations/2024-07-01-200425_remove_external_id/: down.sql  up.sql
src-tauri/migrations/2024-07-02-062958_remove_integration/: down.sql  up.sql
src-tauri/migrations/2024-07-05-143211_create_integrations/: down.sql  up.sql
src-tauri/migrations/2024-07-11-091235_create_send_log/: down.sql  up.sql
src-tauri/migrations/2024-08-19-043818_integration_config/: up.sql
src-tauri/src/: cli.rs  db.rs  lib.rs  main.rs  repositories.rs  schema.rs  utils.rs
src-tauri/src/api/: integrations.rs  settings.rs  tasks.rs
src-tauri/src/commands/: integrations.rs  mod.rs  settings.rs  tasks.rs
src-tauri/src/core/: db.rs  db_manager.rs  db_migrations.rs  integration_manager.rs  mod.rs  settings_manager.rs  task.rs  task_manager.rs
src-tauri/src/engines/: jira.rs  mod.rs  redmine.rs
src-tauri/src/integrations/: commands.rs  jira.rs  mod.rs  redmine.rs  tests.rs
src-tauri/src/models/: ids.rs  integration.rs  mod.rs  models.rs  settings.rs  tasks.rs  utils.rs  view_type.rs
src-tauri/src/models/types/: integration.rs  integration_log_status.rs  integration_type.rs  mod.rs
src-tauri/src/repositories/: integrations.rs  mod.rs  settings.rs  tasks.rs
src-tauri/src/settings/: commands.rs  mod.rs  models.rs  repository.rs  tests.rs
src-tauri/src/settings/types/: integration_type.rs  json_field.rs  mod.rs  work_hours.rs
src-tauri/src/tasks/: commands.rs  mod.rs  models.rs  repository.rs  tests.rs
src-tauri/src/utils/: dates.rs  mod.rs  tests.rs
src-tauri/tests/: integrations.rs  settings.rs  tasks.rs  utils.rs
src-tauri/tests/common/: mod.rs
src/components/: AddTaskForm.tsx  CopyToClipboardBtn.tsx  DateSelector.tsx  EditTask.vue  Favourites.tsx  NewTask.vue  RedmineActivitySelect.tsx  SearchExternalId.tsx  SelectCustom.tsx  Settings.vue  SummaryGoal.vue  Sync.tsx  Sync.vue  TableViewType.vue  TaskEdition.tsx  TasksTable.vue  TasksTableActionsHeader.tsx  TasksTableGrouped.vue  TitleDate.tsx  ViewTypeSelector.tsx  WeekProgress.vue
src/constants/: sync.ts  tables.ts  tasks_table.ts  themes.ts
src/hooks/: useCalendar.ts  useClipboard.ts  useDate.ts  useFavourites.ts  useInfo.ts  useKeyboard.ts  useSync.ts  (+5 more)
(+97 files in other folders)
