[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Francesc Arpí Roca"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
tauri = { version = "1.6.1", features = ["shell-open", "system-tray"] }
rust-ini = "0.21.0"
chrono = { version = "0.4.35", features = ["serde"] }
oxhttp = { version = "0.1.7", features = ["native-tls"] }
platform-dirs = "0.3.0"
diesel = { version = "2.1.5", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
url = "2.5.0"
fork = "0.1.23"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
