[package]
name = "app"
version = "0.0.0"
description = "A Tauri App"
authors = ["Francesc Arpí Roca"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.17", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta.22", features = ["tray-icon"] }
tauri-plugin-shell = "2.0.0-beta.7"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
rust-ini = "0.21.0"
chrono = { version = "0.4.35", features = ["serde"] }
oxhttp = { version = "0.2.0", features = ["native-tls"] }
platform-dirs = "0.3.0"
diesel = { version = "2.2.1", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "2.1.0"
libsqlite3-sys = { version = "0.28.0", features = ["bundled"] }
url = "2.5.2"
log = "0.4.21"
env_logger = "0.11.3"
base64 = "0.22.1"

[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.1.23"
