[package]
name = "app"
version = "0.0.0"
description = "Time tracker made with rust"
authors = ["Francesc Arpí Roca"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
tauri = { version = "2.1.1", features = ["tray-icon"] }
tauri-plugin-shell = "2.2.0"
serde_json = "1.0.133"
serde = { version = "1.0.216", features = ["derive"] }
rust-ini = "0.21.1"
chrono = { version = "0.4.39", features = ["serde"] }
oxhttp = { version = "0.2.6", features = ["native-tls"] }
platform-dirs = "0.3.0"
diesel = { version = "2.2.6", features = ["chrono", "sqlite", "r2d2"] }
diesel_migrations = "2.2.0"
libsqlite3-sys = { version = "0.30.1", features = ["bundled"] }
url = "2.5.4"
log = "0.4.22"
env_logger = "0.11.5"
base64 = "0.22.1"
tauri-plugin-process = "2.2.0"

[target.'cfg(target_os = "linux")'.dependencies]
fork = "0.2.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2.3.0"
